--- a/css/contrast.css
+++ b/css/contrast.css
@@ -23,6 +23,11 @@ h1, h2, h3 {
 h2.section-title {
   color: #0da1a9;
   font-weight: bold;
+  font-size: 20px;
+}
+
+p.lead {
+  font-size: 14px;
 }
 
 p { 
@@ -31,6 +36,7 @@ p {
 
 .contrastron {
   padding: 0px !important;
+  margin: 0px !important;
 }
 
 .contrastron-sub {
@@ -38,6 +44,31 @@ p {
 }
 
 .ide-icon {
-  height: 100px;
-  width: 100px;
+  height: 50px;
+  width: 50px;
+}
+
+.ide-icon-big {
+  height: 120px;
+  width: 120px;
+}
+
+div.section-header {
+  margin-top: 20px;
+  margin-botton: 10px;
+  padding-left: 15px;
+}
+
+div.contrast-box {
+  padding: 0px !important;
+  border: solid 1px #dadada;
+  border-radius: 5px;
+  box-shadow: 0px 0px 2px #e7e7e7;
+}
+
+h2.contrast-item-heading {
+  font-family: 'Roboto Condensed';
+  color: #292929;
+  font-size: 24px;
+  font-weight: 700;
 }
