added contrastcli tool

--- a/css/contrast.css
+++ b/css/contrast.css
@@ -106,6 +106,10 @@ p.contrastron-lead {
   width: 155px;
 }
 
+.ide-icon-cli {
+  height: 123px;
+  width: 123px;
+}
 
 div.section-header {
   margin-top: 20px;
